--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,3 +1,11 @@
+---
+layout: page
+permalink: /publications/
+title: Publications
+description: 
+nav: true
+nav_order: 2
+---
 
 <style>
 .publications-wrapper {
@@ -11,7 +19,8 @@
   align-items: flex-start; /* Align items to the top */
   margin-bottom: 20px; /* Adjust the space between items */
   max-width: 1200px; /* Maximum width of the content */
-  
+  margin-left: auto; /* Centers the content */
+  margin-right: auto; /* Centers the content */
 }
 
 
@@ -58,7 +67,7 @@
 
 /* You may need to add more styling for links and other elements */
 </style>
-<h2><strong>Publications</strong></h2>
+
 <div class='publications-wrapper'>
   <div class='publication-item'>
     <div class="publication-image">
