--- a/_pages/about.html
+++ b/_pages/about.html
@@ -2,19 +2,32 @@
 layout: about
 title: About
 permalink: /
-subtitle: 
+# subtitle: <a href='#'>Affiliations</a>. Address. Contacts. Moto. Etc.
 
 profile:
   align: right
-  image: 
-  address: >
+  image: profile.jpeg
+  image_circular: false # crops the image to make it circular
+  more_info: #> 
+    # <p>Research Areas: Optics & Photonics | Systems & Networking | Programmable Hardware</p>
+    # <p>123 your address street</p>
+    # <p>Your City, State 12345</p>
 
-news: true  # includes a list of news items
+news: false # includes a list of news items
 selected_papers: true # includes a list of papers marked as "selected={true}"
-social: true  # includes social icons at the bottom of the page
+social: true # includes social icons at the bottom of the page
 ---
 
-I'm 
+<!-- I am currently pursuing the MASc degree in the Department of Electrical and Computer Engineering from the [University of Toronto](https://www.engineering.utoronto.ca). I complete my bachelor’s degree in Computer Engineering at [University of Toronto](https://www.engineering.utoronto.ca). -->
+
+<p>I am currently pursuing the MASc degree in the Department of Electrical and Computer Engineering from the <a href="https://www.engineering.utoronto.ca">University of Toronto</a>. I complete my bachelor’s degree in Computer Engineering at <a href="https://www.engineering.utoronto.ca">University of Toronto</a>.</p>
+
+<h2>Research Areas:</h2>
+  <ul>
+    <li>Optical Network</li>
+    <li>Traffic Engineering</li>
+    <li>Machine Learning</li>
+  </ul>
 
 <!-- Part-time content creator with more than 50,000 followers and 10 million views on [Bilibili](https://space.bilibili.com/537049440), [Douyin](https://www.douyin.com/user/MS4wLjABAAAAmk2iWqbZmPZZfGJBKYwdhxciN6D24MsoaagyrSWbK6eQxObsfmIFFINyM3RLqnOc), and [YouTube](https://www.youtube.com/c/gitbag).
  -->
@@ -24,3 +37,4 @@ I'm
 Put your address / P.O. box / other info right below your picture. You can also disable any these elements by editing `profile` property of the YAML header of your `_pages/about.md`. Edit `_bibliography/papers.bib` and Jekyll will render your [publications page](/al-folio/publications/) automatically.
 
 Link to your social media connections, too. This theme is set up to use [Font Awesome icons](http://fortawesome.github.io/Font-Awesome/) and [Academicons](https://jpswalsh.github.io/academicons/), like the ones below. Add your Facebook, Twitter, LinkedIn, Google Scholar, or just disable all of them. -->
+
