Updated profile photo

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -20,21 +20,4 @@ social: true # includes social icons at the bottom of the page
 
 <!-- I am currently pursuing the MASc degree in the Department of Electrical and Computer Engineering from the [University of Toronto](https://www.engineering.utoronto.ca). I complete my bachelor’s degree in Computer Engineering at [University of Toronto](https://www.engineering.utoronto.ca). -->
 
-<p>I am currently pursuing the MASc degree in the Department of Electrical and Computer Engineering from the <a href="https://www.engineering.utoronto.ca">University of Toronto</a>. I complete my bachelor’s degree in Computer Engineering at <a href="https://www.engineering.utoronto.ca">University of Toronto</a>.</p>
-
-<h2>Research Areas:</h2>
-  <ul>
-    <li>Optical Network</li>
-    <li>Traffic Engineering</li>
-    <li>Machine Learning</li>
-  </ul>
-
-<!-- Part-time content creator with more than 50,000 followers and 10 million views on [Bilibili](https://space.bilibili.com/537049440), [Douyin](https://www.douyin.com/user/MS4wLjABAAAAmk2iWqbZmPZZfGJBKYwdhxciN6D24MsoaagyrSWbK6eQxObsfmIFFINyM3RLqnOc), and [YouTube](https://www.youtube.com/c/gitbag).
- -->
-
-<!-- Write your biography here. Tell the world about yourself. Link to your favorite [subreddit](http://reddit.com). You can put a picture in, too. The code is already in, just name your picture `prof_pic.jpg` and put it in the `img/` folder.
-
-Put your address / P.O. box / other info right below your picture. You can also disable any these elements by editing `profile` property of the YAML header of your `_pages/about.md`. Edit `_bibliography/papers.bib` and Jekyll will render your [publications page](/al-folio/publications/) automatically.
-
-Link to your social media connections, too. This theme is set up to use [Font Awesome icons](http://fortawesome.github.io/Font-Awesome/) and [Academicons](https://jpswalsh.github.io/academicons/), like the ones below. Add your Facebook, Twitter, LinkedIn, Google Scholar, or just disable all of them. -->
-
+<p>I am a first-year M.A.Sc. student in the Department of Electrical and Computer Engineering at the <a href="https://www.engineering.utoronto.ca">University of Toronto</a>, supervised by Prof. Baochun Li.  I received my bachelor's degree in Computer Engineering from the <a href="https://www.engineering.utoronto.ca">University of Toronto</a>. My research interests including distributed machine learning, datacenter networks and networked systems. </p> 
