--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -33,7 +33,7 @@ nav_order: 2
 
 /* Adjustments for larger image */
 .publication-image img {
-  width:420px; /* Set the width as needed */
+  width:400px; /* Set the width as needed */
   height: auto; /* Height will scale automatically */
 }
 
@@ -85,6 +85,7 @@ nav_order: 2
         </div>
 
       <div class="publication-links">
+        <a href="https://people.csail.mit.edu/zhizhenzhong/papers/2023_SIGCOMM_flexwan.pdf">Paper</a> | 
         <a href="https://conferences.sigcomm.org/events/apnet2023//slides/apnet23/Industry/miao_FlexWAN_APNET.pdf">Slides</a> | 
         <a href="https://www.youtube.com/watch?v=712VsqKW7-k">Video</a> | 
         <a href="https://github.com/congcongmiao/FlexWAN">Artifact</a> 
